--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Generate README
         uses: muesli/readme-scribe@master
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         with:
           template: "README.md.tpl"
           writeTo: "README.md"
